index.css
/* variables for the document */
:root {
    --site-blue: rgb(0, 49, 106);
    --site-flont: "Gill Sans", sans-serif;
    --semibold: 600;
}

/* the HTML document */
html, body {
    font-family: "Gill Sans", sans-serif;
    scroll-behavior: smooth;
    padding: 0;
    margin: 0;
}

/* the title of the site */
#site-title {
    color: var(--site-blue);
    padding: 1% 1%;
    font-weight: var(--semibold);
}

/* the big hello text for the site */
#site-hello {
    color: var(--site-blue);
    text-align: center;
    font-size: 500%;
    margin: 0;
    padding: 0;
    animation: fadeInAnimation ease 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

/* the subtitle for the site */
#site-subtitle {
    font-weight: normal;
    text-align: center;
    width: 90%;
    margin: 2% auto 5% auto;
    font-family: Monospaced, monospace;
    animation: fadeInAnimation ease 1s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.desktop-set {
    display: none !important;
}

.mobile-set {
    display: flex;
}

/* the flex container for columns within a section */
.column-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0;
    padding: 0 1%;
}

/* a column within a section */
.column {
    margin-bottom: 0;
    /*margin-bottom: 1rem;*/
    text-align: justify;
    position: relative;
    flex-basis: auto;
}

/* when the site is larger than the minimum pixels */
@media (min-width: 800px) {
    .column-container {
        flex-wrap: nowrap;
        width: 85%;
        margin: auto;
    }

    .column {
        margin-bottom: 0;
        padding: 1rem;
        text-align: center;
    }

    #site-subtitle {
        width: 30%;
    }

    .desktop-set {
        display: flex !important;
    }

    .mobile-set {
        display: none !important;
    }
}

/* images */
img {
    max-width: 100%;
    border-radius: 3px;
    image-rendering: smooth;
}

/* what happens to the image when the nav button is hovered*/
.column:hover img {
    box-shadow: 5px 5px 10px black;
    transform: scale(1.05, 1.05) skew(-2deg);
    z-index: 0;
    transition: all 100ms ease-in-out;
}

/* what happens to the text when the nav option is hovered */
.column:hover .nav-title {
    transform: translate(-50%, -50%) scale(1.2, 1.2) skew(-2deg);
    z-index: 1;
    transition: all 100ms ease-in-out;
}

/* the text for an option in the navigation */
.nav-title {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-weight: var(--semibold);
    margin: 0;
    padding: 0;
}

/* the top section of the site */
#top-section {
    height: 100vh;
}

/* a section of the site */
.site-section {
    width: 100%;
    padding: 1%;
    left: 0;
    text-align: center;
    min-height: 100vh;
}

/* the header text for a section */
.section-header {
    font-weight: var(--semibold);
    text-align: center;
    font-size: 350%;
}

/* make text blue */
.blue-text {
    color: var(--site-blue);;
}

/* make text white */
.white-text {
    color: white;
}

/* make the background blue */
.blue-back {
   background-color: var(--site-blue);
}

/* make the background white */
.white-back {
    background-color: white;
}

/* links on the site */
a {
    color: inherit;
    text-decoration: inherit;
}

/* a button to download a file */
.file-button {
    font-weight: normal;
    border-radius: 3px;
    display: inline-block;
    padding: 0 1%;
    margin-left: 1%;
    margin-right: 1%;
}

/* the download file button when hovered */
.file-button:hover {
    transform: scale(1.05, 1.05) skew(-3deg);
    transition: all 100ms ease-in-out;
    box-shadow: 3px 3px 5px gray;
}

/* the invisible link (anchor) for a section */
.link-to {
    display: block;
    position: relative;
    top: 0;
    visibility: hidden;
}

.document-frame {
    max-width: 80%;
    height: 400px;
    display: block;
    margin: 2% auto;
}

/* define the animation for fading something in */
@keyframes fadeInAnimation {
    0% {
        opacity: 0;
        transform: scale(1.5);
    }
    100% {
        opacity: 1;
    }
}


#files {
    background-color: var(--site-blue);
    color: white;
}

